# rusty-book-manager

./: Cargo.toml  Makefile.toml  README.md  compose.yaml  rust-toolchain.toml
.cargo/: config.toml
adapter/: Cargo.toml
adapter/migrations/: 20241124234638_start.down.sql  20241124234638_start.up.sql
adapter/src/database/: checkout.rs  mod.rs
adapter/src/database/model/: auth.rs  book.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs  lib.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
examples/: async_await_futures.rs  async_send_get_requests.rs  async_send_get_requests_in_tokio_main.rs  dynamic_dependency_injection.rs  nest_futures.rs  pattern_match_examples.rs  simple_dependency_injection.rs  simple_http_server.rs  static_dependency_injection.rs
frontend/: package-lock.json  package.json
kernel/: Cargo.toml
kernel/src/model/: id.rs  role.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/checkout/: mod.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
rstest-example/: Cargo.toml
rstest-example/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
sqlx-test-example/: .env  Cargo.toml
sqlx-test-example/migrations/: 20241204235501_setup.sql
sqlx-test-example/src/: lib.rs
sqlx-test-example/src/fixtures/: common.sql
src/: main.rs
