[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["adapter", "api", "kernel", "registry", "shared"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"


[workspace.dependencies]
adapter = { path = "./adapter" }
anyhow = "1.0.75"
api = { path = "./api" }
async-trait = "0.1.74"
axum = { version = "0.7.5", features = ["macros"] }
derive-new = "0.6.0"
kernel = { path = "./kernel" }
registry = { path = "./registry" }
shared = { path = "./shared" }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "uuid",
  "chrono",
  "macros",
  "postgres",
  "migrate",
] }
tokio = { version = "1.37.0", features = ["full"] }

[dependencies]
adapter.workspace = true
anyhow.workspace = true
api.workspace = true
async-trait.workspace = true
axum.workspace = true
derive-new.workspace = true
registry.workspace = true
shared.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
futures = "0.3.31" # examples
reqwest = "0.12.9" # examples
rstest = "0.18.2"  # tests
time = "0.3.36"
