[package]
name = "adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
derive-new.workspace = true
kernel.workspace = true
redis.workspace = true
secrecy.workspace = true
shared.workspace = true
sqlx.workspace = true

[dev-dependencies]
anyhow.workspace = true
