[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive-new.workspace = true
mockall.workspace = true
serde.workspace = true
shared.workspace = true
strum.workspace = true
sqlx.workspace = true
uuid.workspace = true
utoipa.workspace = true
